[gd_scene load_steps=5 format=3 uid="uid://dcjptc5h2hwgq"]

[ext_resource type="Script" uid="uid://dx2lbf0kkulvo" path="res://ui/main_menu/main_menu.gd" id="1_r785l"]
[ext_resource type="Texture2D" uid="uid://byukgpq4ekqs4" path="res://asset_packs/tutorial-fps-assets/textures/bg_black_and_white.png" id="2_3848r"]
[ext_resource type="Script" uid="uid://5xi0rw7llpta" path="res://ui/main_menu/quickplay_connection_ui.gd" id="3_omy8q"]
[ext_resource type="PackedScene" path="res://ui/map_selection/map_grid.tscn" id="4_mapgrid"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r785l")

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3848r")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TopBar" type="HBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="GameTitle" type="Label" parent="MarginContainer2/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 64
text = "GUN"

[node name="Spacer" type="Control" parent="MarginContainer2/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GameModeContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PvPButton" type="Button" parent="MarginContainer2/VBoxContainer/TopBar/GameModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 44)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 18
toggle_mode = true
button_pressed = true
text = "PvP"

[node name="ZombiesButton" type="Button" parent="MarginContainer2/VBoxContainer/TopBar/GameModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 44)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "Zombies"

[node name="Spacer2" type="Control" parent="MarginContainer2/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="SettingsWidget" type="VBoxContainer" parent="MarginContainer2/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AudioContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/TopBar/SettingsWidget"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/TopBar/SettingsWidget/AudioContainer"]
layout_mode = 2
text = "Audio"

[node name="AudioCheckBox" type="CheckBox" parent="MarginContainer2/VBoxContainer/TopBar/SettingsWidget/AudioContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0

[node name="FullscreenContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/TopBar/SettingsWidget"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/TopBar/SettingsWidget/FullscreenContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="MarginContainer2/VBoxContainer/TopBar/SettingsWidget/FullscreenContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0

[node name="Spacer3" type="Control" parent="MarginContainer2/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="ExitButton" type="Button" parent="MarginContainer2/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(100, 44)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 18
text = "Exit"

[node name="MapGrid" parent="MarginContainer2/VBoxContainer" instance=ExtResource("4_mapgrid")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="QuickplayConnectionUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_omy8q")

[node name="ColorRect" type="ColorRect" parent="QuickplayConnectionUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="VBoxContainer" type="VBoxContainer" parent="QuickplayConnectionUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="StatusLabel" type="Label" parent="QuickplayConnectionUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40

[node name="CloseButton" type="Button" parent="QuickplayConnectionUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Close"

[node name="CancelButton" type="Button" parent="QuickplayConnectionUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Cancel"

[node name="BottomBar" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2

[node name="PlayerNameContainer" type="VBoxContainer" parent="BottomBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="BottomBar/HBoxContainer/PlayerNameContainer"]
layout_mode = 2
text = "Player Name"

[node name="PlayerNameLineEdit" type="LineEdit" parent="BottomBar/HBoxContainer/PlayerNameContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 36)
layout_mode = 2
placeholder_text = "Enter name..."
context_menu_enabled = false
shortcut_keys_enabled = false

[connection signal="pressed" from="MarginContainer2/VBoxContainer/TopBar/GameModeContainer/PvPButton" to="." method="_on_pvp_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TopBar/GameModeContainer/ZombiesButton" to="." method="_on_zombies_button_pressed"]
[connection signal="toggled" from="MarginContainer2/VBoxContainer/TopBar/SettingsWidget/AudioContainer/AudioCheckBox" to="." method="_on_audio_check_box_toggled"]
[connection signal="toggled" from="MarginContainer2/VBoxContainer/TopBar/SettingsWidget/FullscreenContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TopBar/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="map_selected" from="MarginContainer2/VBoxContainer/MapGrid" to="." method="_on_map_grid_map_selected"]
[connection signal="pressed" from="QuickplayConnectionUI/VBoxContainer/CloseButton" to="QuickplayConnectionUI" method="_on_close_button_pressed"]
[connection signal="pressed" from="QuickplayConnectionUI/VBoxContainer/CancelButton" to="QuickplayConnectionUI" method="_on_cancel_button_pressed"]
